--- a/sucursal.html
+++ b/sucursal.html
@@ -2,98 +2,93 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>PaMonchar</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+  <title>PaMonchar</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
 
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Custom Google font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-        rel="stylesheet" />
-    <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Custom Google font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+    rel="stylesheet" />
+  <!-- Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="/js/rutinas.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+  <script src="/js/rutinas.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
-<body class="d-flex flex-column h-100 bg-secondary">
-    <!-- 1 Fragmento tabla de navegación -->
-    <main class="flex-shrink-0">
+<body class="d-flex flex-column h-100 --bs-emphasis-color">
 
-        <nav class="navbar navbar-expand-lg py-3" style="background: linear-gradient(to right, #fdba14, #df531e); height: 110px; display: flex; justify-content: center; align-items: center;">
-            <div class="container px-5" style="font-family:fantasy">
-                <a class="navbar-brand" href="./index.html"><span class="fw-bolder " style="color: #000000; font-size: 24px;">La ruta del
-                        sabor</span></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation"><span
-                        class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                        <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="/pruebas/listado2" 
-                               style="color: #000000;"
-                               onmouseover="this.style.color = '#ffffff ';" 
-                               onmouseout="this.style.color = '#000000';">
-                                <i class="fas fa-utensils"></i> Menú
-                            </a>
-                        </li>
-                        <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="./sucursal.html" 
-                               style="color: #000000;"
-                               onmouseover="this.style.color = '#ffffff ';" 
-                               onmouseout="this.style.color = '#000000';">
-                                <i class="fas fa-concierge-bell"></i> Reservaciones
-                            </a>
-                        </li>
-                        <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
-                            <a class="nav-link" href="./sucursal.html" 
-                               style="color: #000000;"
-                               onmouseover="this.style.color = '#ffffff ';" 
-                               onmouseout="this.style.color = '#000000';">
-                               <i class="fa-solid fa-location-dot"></i> Sucursales
-                            </a>
-                        </li>
+  <!-- 1 Fragmento tabla de navegación -->
+  <main class="flex-shrink-0">
 
-                        <li class="nav-item my-auto text-white">
-                            <a class="nav-menu-link nav-link"
-                               href="/login"
-                               style="color: #000000;"
-                               onmouseover="this.style.color = '#ffffff ';" 
-                               onmouseout="this.style.color = '#000000';">
-                                <i class="fa fa-user-alt" style="font-size: 1.5em;"></i>
-                            </a>
-                        </li>
-                        <ul class="navbar-nav">     
-                            <li class="nav-item my-auto text-black mt-1" style="margin: 0 5px;"> 
-                                <form method="post" action="/logout">
-                                    <button class="btn"   
-                                            style="color: #000000;"
-                                            onmouseover="this.style.color = '#ffffff ';" 
-                                            onmouseout="this.style.color = '#000000';">
-                                        <i class="fas fa-right-from-bracket" style="font-size: 1.5em;"></i> 
-                                    </button>  
-                                </form>
-                            </li>
-                        </ul>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+    <nav class="navbar navbar-expand-lg py-3"
+      style="background: linear-gradient(to right, #a0d5af,#1f5b24 ); height: 110px; display: flex; justify-content: center; align-items: center;">
+      <div class="container px-5" style="font-family:fantasy">
+        <a class="navbar-brand" href="index.html"><span class="fw-bolder " style="font-size: 40px; color: #000000;">La ruta del
+            sabor</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+            class="navbar-toggler-icon"></span></button>
+            
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+            <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
+              <a class="nav-link" href="./menu.html" style="color: #000000;"
+                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
+                <i class="fas fa-utensils"></i> Menú
+              </a>
+            </li>
 
-    </main>
+            <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
+              <a class="nav-link" href="./ordenar.html" style="color: #000000;"
+                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
+                <i class="fas fa-concierge-bell"></i> Ordenar Ya
+              </a>
+            </li>
+
+            <li class="nav-item px-2" style="font-family:fantasy; font-size: 24px;">
+              <a class="nav-link" href="./sucursal.html" style="color: #000000;"
+                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
+                <i class="fas fa-concierge-bell"></i> Sucursales
+              </a>
+            </li>
+
+            <li class="nav-item my-auto text-white">
+              <a class="nav-menu-link nav-link" href="/login" style="color: #000000;"
+                onmouseover="this.style.color = '#ffffff ';" onmouseout="this.style.color = '#000000';">
+                <i class="fa fa-user-alt" style="font-size: 1.5em;"></i>
+              </a>
+            </li>
+
+            <ul class="navbar-nav">
+              <li class="nav-item my-auto text-black mt-1" style="margin: 0 5px;">
+                <form method="post" action="/logout">
+                  <button class="btn" style="color: #000000;" onmouseover="this.style.color = '#ffffff ';"
+                    onmouseout="this.style.color = '#000000';">
+                    <i class="fas fa-right-from-bracket" style="font-size: 1.5em;"></i>
+                  </button>
+                </form>
+              </li>
+            </ul>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  </main>
 
     <br>
     <div class="map-container">
@@ -123,18 +118,19 @@
         <p>Av. William H. Taft, Calle 4, local #3</p>
     </div>
 
-    <!-- 10 footer -->
-    <footer class="bg-dark text-white p-2 text-center" style="margin-top: 52px">
-        <h2>Contáctanos</h2>
-        <h4>+506 8745 2819</h4>
-        <div style="margin: 10px 0;">
-            <i class="fa-brands fa-facebook fa-xl" style="color: #0058f0; margin: 0 10px;"></i>
-            <i class="fa-brands fa-instagram fa-xl" style="color: #b00303; margin: 0 10px;"></i>
-            <i class="fa-brands fa-x-twitter fa-xl" style="color: #ffffff; margin: 0 10px;"></i>
-            <i class="fa-brands fa-whatsapp fa-xl" style="color: #28e901; margin: 0 10px;"></i>
-        </div>
-        <p style="margin-top: 8px">© Derechos reservados</p>
-    </footer>
+     <!-- 10 footer -->
+  <footer class="footer">
+    <h2>Contáctanos</h2>
+    <h4>+506 8745 2819</h4>
+    <div style="margin: 10px 0;">
+      <i class="fa-brands fa-facebook fa-xl icon-facebook"></i>
+      <i class="fa-brands fa-instagram fa-xl icon-instagram"></i>
+      <i class="fa-brands fa-x-twitter fa-xl icon-twitter"></i>
+      <i class="fa-brands fa-whatsapp fa-xl icon-whatsapp"></i>
+      
+    </div>
+    <p class= "derechos">© Derechos reservados</p>
+  </footer>
 </body>
 
 </html>
